Adding a `MockPackageService` and now the `PackageResource` returns data for the en/kgp language/package combination

--- a/pom.xml
+++ b/pom.xml
@@ -236,7 +236,7 @@
                     <outputDirectory>${project.build.directory}/mvn-repo</outputDirectory> <!-- matches distribution management repository url above -->
                     <branch>refs/heads/mvn-repo</branch>                       <!-- remote branch name -->
                     <includes><include>**/*</include></includes>
-                    <repositoryName>conf-registration-api</repositoryName>      <!-- github repo name -->
+                    <repositoryName>godtools-api</repositoryName>      <!-- github repo name -->
                     <repositoryOwner>CruGlobal</repositoryOwner>    <!-- github username  -->
                 </configuration>
                 <executions>
