Now returing multipart response #Adding files for kgp en translation  #- parsing all the XML correctly, now what to do with it? # Please enter the commit message for your changes. Lines starting # with '#' will be ignored, and an empty message aborts the commit. # On branch api-stubs # Changes to be committed: #   (use "git reset HEAD <file>..." to unstage) # #	modified:   pom.xml #	new file:   src/main/java/org/cru/godtools/api/packages/MockPackageService.java #	modified:   src/main/java/org/cru/godtools/api/packages/PackageResource.java #	new file:   src/main/resources/data/packages-en-kgp.xml # # Untracked files: #   (use "git add <file>..." to include in what will be committed) # #	src/main/resources/data/packages/

--- a/pom.xml
+++ b/pom.xml
@@ -80,6 +80,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-multipart-provider</artifactId>
+            <version>3.0.6.Final</version>
+        </dependency>
+
+        <dependency>
             <groupId>com.thetransactioncompany</groupId>
             <artifactId>cors-filter</artifactId>
             <version>1.8</version>
