--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,7 @@
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jaxrs</artifactId>
             <version>3.0.6.Final</version>
+            <!--required to run DB migration... -->
             <scope>provided</scope>
         </dependency>
 
