--- a/pom.xml
+++ b/pom.xml
@@ -74,12 +74,6 @@
         </dependency>
 
         <dependency>
-            <groupId>org.apache.commons</groupId>
-            <artifactId>commons-io</artifactId>
-            <version>1.3.2</version>
-        </dependency>
-
-        <dependency>
             <groupId>postgresql</groupId>
             <artifactId>postgresql</artifactId>
             <version>9.1-901.jdbc4</version>
@@ -94,7 +88,13 @@
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-multipart-provider</artifactId>
-            <version>3.0.6.Final</version>
+            <version>3.0.8.Final</version>
+        </dependency>
+
+        <dependency>
+            <groupId>org.jboss.resteasy</groupId>
+            <artifactId>resteasy-client</artifactId>
+            <version>3.0.8.Final</version>
         </dependency>
 
         <dependency>
@@ -119,15 +119,15 @@
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jaxrs</artifactId>
-            <version>3.0.6.Final</version>
-            <scope>provided</scope>
+            <version>3.0.8.Final</version>
+            <!--<scope>provided</scope>-->
         </dependency>
 
         <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jackson-provider</artifactId>
-            <version>3.0.6.Final</version>
-            <scope>provided</scope>
+            <version>3.0.8.Final</version>
+            <!--<scope>provided</scope>-->
         </dependency>
 
         <!-- These two are needed for the RestEasy client. Not sure why they are not transitively pulled in. -->
