--- a/pom.xml
+++ b/pom.xml
@@ -120,6 +120,12 @@
         </dependency>
 
         <dependency>
+            <groupId>org.cru</groupId>
+            <artifactId>red-egg</artifactId>
+            <version>1-SNAPSHOT</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.jboss.resteasy</groupId>
             <artifactId>resteasy-jaxrs</artifactId>
             <version>3.0.8.Final</version>
