--- a/api/src/main/webapp/WEB-INF/web.xml
+++ b/api/src/main/webapp/WEB-INF/web.xml
@@ -25,5 +25,17 @@
 		<param-name>resteasy.scan</param-name>
 		<param-value>true</param-value>
 	</context-param>
+    
+    <filter>
+        <filter-name>RedEggFilter</filter-name>
+        <filter-class>org.cru.redegg.servlet.RedEggFilter</filter-class>
+    </filter>
+    <filter-mapping>
+        <filter-name>RedEggFilter</filter-name>
+        <url-pattern>/*</url-pattern>
+    </filter-mapping>
+    <listener>
+        <listener-class>org.cru.redegg.servlet.RedEggServletListener</listener-class>
+    </listener>
 		
 </web-app>
