--- a/pom.xml
+++ b/pom.xml
@@ -3,8 +3,11 @@
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.cru</groupId>
     <artifactId>godtools-api</artifactId>
-    <packaging>war</packaging>
+    <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
+    <modules>
+        <module>migration</module>
+    </modules>
     <name>Godtools API</name>
     <url>...</url>
 
