--- a/pom.xml
+++ b/pom.xml
@@ -2,11 +2,12 @@
          xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/maven-v4_0_0.xsd">
     <modelVersion>4.0.0</modelVersion>
     <groupId>org.cru</groupId>
-    <artifactId>godtools-api</artifactId>
+    <artifactId>godtools</artifactId>
     <packaging>pom</packaging>
     <version>1.0.0-SNAPSHOT</version>
     <modules>
         <module>migration</module>
+        <module>api</module>
     </modules>
     <name>Godtools API</name>
     <url>...</url>
