Add a dependency to the API module for the classes which reside there

--- a/migration/pom.xml
+++ b/migration/pom.xml
@@ -11,5 +11,11 @@
 
     <artifactId>godtools-migration</artifactId>
 
+    <dependencies>
+        <dependency>
+            <groupId>org.cru</groupId>
+            <artifactId>godtools-api</artifactId>
+        </dependency>
+    </dependencies>
 
 </project>
