--- a/migration/pom.xml
+++ b/migration/pom.xml
@@ -14,7 +14,13 @@
     <dependencies>
         <dependency>
             <groupId>org.cru</groupId>
-            <artifactId>godtools-api</artifactId>
+            <artifactId>godtools-domain</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
+        </dependency>
+        <dependency>
+            <groupId>org.cru</groupId>
+            <artifactId>godtools</artifactId>
+            <version>1.0.0-SNAPSHOT</version>
         </dependency>
     </dependencies>
 
