--- a/api/pom.xml
+++ b/api/pom.xml
@@ -15,6 +15,12 @@
 
     <dependencies>
         <dependency>
+            <groupId>org.jboss.logging</groupId>
+            <artifactId>jboss-logging</artifactId>
+            <version>3.1.4.GA</version>
+        </dependency>
+
+        <dependency>
             <groupId>org.cru</groupId>
             <artifactId>godtools-domain</artifactId>
             <version>1.0.0-SNAPSHOT</version> <!-- mvn is being dumb, this should not be required -->
