--- a/api/pom.xml
+++ b/api/pom.xml
@@ -35,6 +35,41 @@
                 <artifactId>maven-war-plugin</artifactId>
                 <version>2.1.1</version>
             </plugin>
+
+            <plugin>
+                <groupId>org.codehaus.mojo</groupId>
+                <artifactId>exec-maven-plugin</artifactId>
+                <version>1.1.1</version>
+                <executions>
+                    <!-- The exec plugin is used to execute UnittestDatabaseBuilder class's main method before each
+                         unittest run to reset the database to a known starting state -->
+
+                    <execution>
+                        <id>1</id>
+                        <phase>test-compile</phase>
+                        <goals>
+                            <goal>java</goal>
+                        </goals>
+                        <configuration>
+                            <mainClass>org.cru.crs.migration.UnittestDatabaseBuilder</mainClass>
+                            <arguments>
+                            </arguments>
+                            <classpathScope>test</classpathScope>
+                        </configuration>
+                    </execution>
+                </executions>
+            </plugin>
+
+            <plugin>
+                <groupId>org.wildfly.plugins</groupId>
+                <artifactId>wildfly-maven-plugin</artifactId>
+                <version>1.0.1.Final</version>
+                <configuration>
+                    <hostname>${deployments.targetServerIP}</hostname>
+                    <username>deployer</username>
+                    <password>${env.deployerPassword}</password>
+                </configuration>
+            </plugin>
         </plugins>
     </build>
 </project>
