Update poms to put wildly maven plugin in the correct place,  now specifying targetDir

--- a/pom.xml
+++ b/pom.xml
@@ -274,6 +274,18 @@
                     <!--</execution>-->
                 </executions>
             </plugin>
+
+            <plugin>
+                <groupId>org.wildfly.plugins</groupId>
+                <artifactId>wildfly-maven-plugin</artifactId>
+                <version>1.0.1.Final</version>
+                <configuration>
+                    <hostname>${deployments.targetServerIP}</hostname>
+                    <username>deployer</username>
+                    <password>${env.deployerPassword}</password>
+                    <targetDir>api/targetz</targetDir>
+                </configuration>
+            </plugin>
         </plugins>
 
         <resources>
