--- a/domain/pom.xml
+++ b/domain/pom.xml
@@ -40,7 +40,7 @@
                             <goal>java</goal>
                         </goals>
                         <configuration>
-                            <mainClass>org.cru.crs.migration.UnittestDatabaseBuilder</mainClass>
+                            <mainClass>org.cru.godtools.domain.UnittestDatabaseBuilder</mainClass>
                             <arguments>
                             </arguments>
                             <classpathScope>test</classpathScope>
