--- a/pom.xml
+++ b/pom.xml
@@ -253,7 +253,7 @@
                             <goal>java</goal>
                         </goals>
                         <configuration>
-                            <mainClass>org.cru.crs.domain.DatabaseMigration</mainClass>
+                            <mainClass>org.cru.godtools.domain.DatabaseMigration</mainClass>
                             <commandlineArgs>
                                 ${migrations.execute} ${migrations.environment}
                             </commandlineArgs>
