JPAAuthorizationService created and JPA settings added. - Annotations added to AuthorizationRecord - POM updated to exclude a deprecated version of Hibernate - hibernate.cfg.xml added to resources to control connection - JPAStandard annotation added to ResourceTest
This version passes all existing tests and does not throw SQL errors.  More tests are needed to check that mapping is working properly.

--- a/pom.xml
+++ b/pom.xml
@@ -149,6 +149,12 @@
             <version>3.0.2.Final</version>
             <type>pom</type>
             <scope>provided</scope>
+            <exclusions>
+                <exclusion>
+                    <groupId>org.hibernate.javax.persistence</groupId>
+                    <artifactId>hibernate-jpa-2.0-api</artifactId>
+                </exclusion>
+            </exclusions>
         </dependency>
 
         <dependency>
@@ -257,6 +263,11 @@
             <groupId>org.hibernate</groupId>
             <artifactId>hibernate-core</artifactId>
             <version>4.3.1.Final</version>
+        </dependency>
+        <dependency>
+            <groupId>org.jadira.usertype</groupId>
+            <artifactId>usertype.core</artifactId>
+            <version>3.2.0.GA</version>
         </dependency>
     </dependencies>
 
