--- a/pom.xml
+++ b/pom.xml
@@ -284,7 +284,7 @@
                             <goal>java</goal>
                         </goals>
                         <configuration>
-                            <mainClass>org.cru.godtools.domain.DatabaseMigration</mainClass>
+                            <mainClass>org.cru.godtools.domain.migration.DatabaseMigration</mainClass>
                             <commandlineArgs>
                                 ${migrations.execute} ${migrations.environment}
                             </commandlineArgs>
